fixed popup not showing, made display toast message cleaner

--- a/frontend/src/components/popup.css
+++ b/frontend/src/components/popup.css
@@ -29,6 +29,8 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.10);
 
     z-index: 3;
+    top: 1rem;
+
 }
 
 .message_container.show{
